--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Codys Personal Site</title>
     </head>
-    <body style="background-color: #EAC8AF;>
+    <body style="background-color: #EAC8AF;">
         <table cellspacing="20">
             <tr>
                 <td><img src="cody-profile.png" alt="Cody Profile Picture"></td>
