--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Codys Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
-    <body style="background-color:#EAC8AF;">
-        <table cellspacing="20">
+    <body>
+        <table cellspacing="10">
             <tr>
                 <td><img src="cody-profile.png" alt="Cody Profile Picture"></td>
                 <td><h1>Cody Tyler Davis</h1> 
-                <p><em>New Web Developer <strong>Fighting</strong> Brain Cancer</em></p>
+                <p><em>New Web Developer <strong>Defeating</strong> Brain Cancer</em></p>
                 <p>Recently started learning how to code <em><strong>October 2022</strong></em> with my recent diagnosis of <strong>Medullablastoma</strong> I figured it would be a great time to learn how to code and follow the path <strong>God</strong> has given me.</p></td>
             </tr>
         </table>
@@ -47,6 +48,7 @@
      </table>
 <hr>
     <h3>Skills</h3>
+     <div class="skills">
      <table cellspacing="10">
         <tr>
             <td>HTML</td>
@@ -61,6 +63,7 @@
             <td>⚡️⚡️⚡️⚡️⚡️⚡️</td>
         </tr>
      </table>
+     </div>
 <hr>
     <a href="hobbies.html">My Hobbies</a>
     <a href="contact.html">Contact Me</a>
