--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Contact Me</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body style="text-align:center;">
         <h1>Get Into Contact</h1>
         <h2>With <strong>Cody Davis</strong></h2>
 <hr>
         <form action="mailto:codytdavis1018@gmail.com" method="post" enctype="text/plain">
-            <label>Your Name</label>
+            <label>Your Name</label><br>
             <input type="text" name="yourName" value=""><br>
-            <label>Your Email</label>
+            <label>Your Email</label><br>
             <input type="email" name="yourEmail" value=""><br>
-            <label>Your Message</label>
+            <label>Your Message</label><br>
             <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
             <input type="submit" name="">
         </form>
