--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Contact Me</title>
-        <link rel="stylesheet" href="/CSS/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body style="text-align:center;">
         <h1>Get Into Contact</h1>
